# cookiecutter-devillint

./: .env.example  cookiecutter.json
cookiecutter-devillint/: cookiecutter.json
cookiecutter-devillint/{{ cookiecutter.project_slug }}/: mkdocs.yml
{{ cookiecutter.project_slug }}/: .gitignore  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/core/: urls.py  wsgi.py
{{ cookiecutter.project_slug }}/core/settings/: asgi.py  base.py  dev.py  prod.py  test.py
{{ cookiecutter.project_slug }}/dashboard/: apps.py  serializers.py  tests.py  urls.py  views.py
{{ cookiecutter.project_slug }}/dashboard/templates/dashboard/: base.html  home.html
{{ cookiecutter.project_slug }}/docs/: index.md
